# matics

./: .gitignore  CMakeLists.txt  README.md
cmathematics/: bigint.c  bigint.h  cmathematics.c  cmathematics.h  main.c  matrix.c  matrix.h  vec.c  vec.h
